# image-compressor-rust

./: .gitignore  Cargo.toml  README.md
src/: compress.rs  main.rs  old_mtpng_code.rs
