[package]
name = "image-compressor"
version = "0.2.0"
authors = ["Yashas Reddy <yashspr5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# mtpng = "0.3.5"
# lodepng = "3.4"
# rgb = "0.8"
oxipng = "4.0.3"
mozjpeg = "0.9.0"
image = "0.23.14"
clap = "3.0.0-beta.2"